-- added herbs to Dressing
-- mixed herbs added
-- herbal soft dough added
-- pomace wine no longer crashes


2.0.0-dev.5
- Meathook placements adjusted yet again
- Yogurt can be added to fruit bars in place of gelatin
- Pemmican can be placed in stacks
- Do stuff with bamboo shoots? idk

HANDBOOK THINGS:
- Muffins and fruit bread have default visuals in the handbook

REBALANCING:
- Chickens can eat eggshells again; eggshell and peanut skin requirements quadrupled for troughs - DONE!!!
- Total review of how "nutritionPropsWhenInMeal" is used; removed from cheese patch since vanilla already has this property
- Dried fruit rehydrates in meals via cookedStack property

BUG FIXES:
- Primitive survival meat patches corrected for meals (cold pasta specifically)
- Oven transforms reviewed for all items
- SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
- Fermented fish slop barrel textures fixed
- Peanut butter fixed so it gives nutrients when in bowl/bucket

NEW FOOD:
- added meatloaf?
- added walnut/sunflower butter?
- Dehydrated yeast added (cook in cooking pot; grind result)

MISC: 
- Dialogue added to Kitchenware Trader; readjusted code to push text to en.json
- Food can be put on the ground, I guess?
- Peanut skin model changed
- Soybean textures/shapes updated
- Primitive survival patches reviewed
- FIX THE FUCKING TRADER SPAWNS!!! STOP SPAWNING IN WATER STOP IT STOP IT STOP ITTTTTTTTTTTTTTTTTT
- Lime can be made by grinding a lot of eggshells



2.0.0-dev.4
HANDBOOK THINGS:
- Meal names fixed in handbook 
- Recipe notes added to meals in the handbook
- Meal descriptions added
- Items grouped together for better handbook visibility
- Meal recipes generally adjusted to look better in the handbook
- Recipe ingredient slots now utilize typeName property
- Dried peat bowl text fixed
- Fruit press handbook entry states the minimum amount needed to work
- Salt crystals mention they can only be made with a cauldron

REBALANCING: