@@ -29,7 +29,6 @@
 				{ "type": "item", "code": "game:vegetable-pumpkin",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "game:vegetable-bellpepper",  "shapeElement": "bowl/vegetable 1/*", "textureMapping": ["fruit", "group8"] },
 				{ "type": "item", "code": "game:mushroom-*", "shapeElement": "bowl/vegetable base 1/*" },
-				{ "type": "block", "code": "game:pumpkin-fruit-4",  "shapeElement": "bowl/vegetable 1/*" },
                 { "type": "item", "code": "game:legume-soybean",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "game:pickledvegetable-*",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "game:pickledlegume-soybean",  "shapeElement": "bowl/vegetable 1/*" },
@@ -154,7 +153,6 @@
 				{ "type": "item", "code": "game:vegetable-cassava",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "game:vegetable-bellpepper",  "shapeElement": "bowl/vegetable 2/*", "textureMapping": ["fruit", "group8"] },
 				{ "type": "item", "code": "game:mushroom-*",  "shapeElement": "bowl/vegetable 2/*" },
-				{ "type": "block", "code": "game:pumpkin-fruit-4",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "game:legume-soybean",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "game:pickledvegetable-*",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "game:pickledlegume-soybean",  "shapeElement": "bowl/vegetable 2/*" },
