@@ -423,7 +423,7 @@
     "op": "addmerge",
     "path": "/ingredients/8",
     "value": {
-      "code": "nuts-extra1",
+      "code": "nuts-extra2",
       "validStacks": [
         { "type": "item", "code": "game:legume-peanut",  "shapeElement": "bowl/nuts 2/*", "textureMapping": [ "acorns", "peanut" ] },
         { "type": "item", "code": "expandedfoods:peanut-cooked",  "shapeElement": "bowl/nuts 2/*", "textureMapping": [ "acorns", "peanut" ] },      
