@@ -43,7 +43,6 @@
 				{ "type": "item", "code": "vegetable-cassava",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "vegetable-bellpepper",  "shapeElement": "bowl/vegetable 1/*", "textureMapping": ["fruit", "group8"] },
 				{ "type": "item", "code": "mushroom-*", "shapeElement": "bowl/vegetable 1/*" },
-				{ "type": "block", "code": "pumpkin-fruit-4",  "shapeElement": "bowl/vegetable 1/*" },
                 { "type": "item", "code": "legume-soybean",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "pickledvegetable-*",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "pickledlegume-soybean",  "shapeElement": "bowl/vegetable 1/*" },
@@ -116,7 +115,6 @@
 				{ "type": "item", "code": "vegetable-cassava",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "vegetable-bellpepper",  "shapeElement": "bowl/vegetable 2/*", "textureMapping": ["fruit", "group8"] },
 				{ "type": "item", "code": "mushroom-*",  "shapeElement": "bowl/vegetable 2/*" },
-				{ "type": "block", "code": "pumpkin-fruit-4",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "legume-soybean",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "pickledvegetable-*",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "pickledlegume-soybean",  "shapeElement": "bowl/vegetable 2/*" },
