@@ -41,7 +41,6 @@
 				{ "type": "item", "code": "vegetable-pumpkin",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "vegetable-bellpepper",  "shapeElement": "bowl/vegetable 1/*", "textureMapping": ["fruit", "group8"] },
 				{ "type": "item", "code": "mushroom-*", "shapeElement": "bowl/vegetable base 1/*" },
-				{ "type": "block", "code": "pumpkin-fruit-4",  "shapeElement": "bowl/vegetable 1/*" },
                 { "type": "item", "code": "legume-soybean",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "pickledvegetable-*",  "shapeElement": "bowl/vegetable 1/*" },
                 { "type": "item", "code": "pickledlegume-soybean",  "shapeElement": "bowl/vegetable 1/*" },
@@ -113,7 +112,6 @@
 				{ "type": "item", "code": "vegetable-pumpkin",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "vegetable-bellpepper",  "shapeElement": "bowl/vegetable 2/*", "textureMapping": ["fruit", "group8"] },
 				{ "type": "item", "code": "mushroom-*",  "shapeElement": "bowl/vegetable 2/*" },
-				{ "type": "block", "code": "pumpkin-fruit-4",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "legume-soybean",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "pickledvegetable-*",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "pickledlegume-soybean",  "shapeElement": "bowl/vegetable 2/*" },
