@@ -40,8 +40,7 @@
 				{ "type": "item", "code": "vegetable-pumpkin",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "vegetable-bellpepper",  "shapeElement": "bowl/vegetable 1/*", "textureMapping": ["fruit", "group8"] },
 				{ "type": "item", "code": "mushroom-*", "shapeElement": "bowl/vegetable base 1/*" },
-				{ "type": "block", "code": "pumpkin-fruit-4",  "shapeElement": "bowl/vegetable 1/*" },
-                { "type": "item", "code": "legume-soybean",  "shapeElement": "bowl/vegetable 2/*" },
+                { "type": "item", "code": "legume-soybean",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "pickledvegetable-*",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "pickledlegume-soybean",  "shapeElement": "bowl/vegetable 1/*" },
 				{ "type": "item", "code": "expandedfoods:choppedvegetable-carrot",  "shapeElement": "bowl/vegetable 1/*", "textureMapping": ["vegetable", "group1"]},
@@ -112,7 +111,6 @@
 				{ "type": "item", "code": "vegetable-pumpkin",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "vegetable-bellpepper",  "shapeElement": "bowl/vegetable 2/*", "textureMapping": ["fruit", "group8"] },
 				{ "type": "item", "code": "mushroom-*",  "shapeElement": "bowl/vegetable 2/*" },
-				{ "type": "block", "code": "pumpkin-fruit-4",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "legume-soybean",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "pickledvegetable-*",  "shapeElement": "bowl/vegetable 2/*" },
 				{ "type": "item", "code": "pickledlegume-soybean",  "shapeElement": "bowl/vegetable 2/*" },
