@@ -88,6 +88,7 @@ On hiatus until Wildcraft Herbs & Spices is updated
 
 HANDBOOK THINGS:
 - Muffins and fruit bread have default visuals in the handbook
+- Sap collecting info moved from handbook guide to spile and sap entries
 
 REBALANCING:
 - Chickens can eat eggshells again; eggshell and peanut skin requirements quadrupled for troughs - DONE!!!
@@ -98,8 +99,10 @@ BUG FIXES:
 - Primitive survival meat patches corrected for meals (cold pasta specifically)
 - Oven transforms reviewed for all items
 - SAUSAGE ONLY HAS HALF THE EXTRA NUTRIENTS WHEN BOILED??? WHY
-- Fermented fish slop barrel textures fixed
+- Fermented fish slop barrel textures fixed - DONE!!!
 - Peanut butter fixed so it gives nutrients when in bowl/bucket
+- Whole pumpkins no longer usable for meals - DONE!!!
+- Porridge patch fixed so it cannot conflict with Wildcraft's nuts in porridge patch - DONE!!!
 
 NEW FOOD:
 - added meatloaf?
